fix(docs) : return router
