# docs/swagger.json
@@ -10,7 +10,7 @@
         "contact": {},
         "version": "2.0"
     },
-    "host": "localhost:8888",
+    "host": "api.calorilin.me:8888",
     "paths": {
         "/generate": {
             "post": {
@@ -765,6 +765,51 @@
                 }
             }
         },
+        "/send/email": {
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "User can send email to customer for invoice",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Send Customer"
+                ],
+                "summary": "Send Email to Customer",
+                "parameters": [
+                    {
+                        "description": "required",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.SendCustomer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/model.SendCustomer"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.SendCustomer"
+                        }
+                    }
+                }
+            }
+        },
         "/upload-image": {
             "get": {
                 "description": "User can get all images information",
@@ -1194,6 +1239,20 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.SendCustomer": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "subject": {
+                    "type": "string"
+                },
+                "to": {
                     "type": "string"
                 }
             }
